@@ -1,3 +1,8 @@
+2014-10-24  Wilco Dijkstra  <wdijkstr@arm.com>
+
+	* sysdeps/aarch64/fpu/fedisblxcpt.c (fedisableexcept):
+	Simplify logic.
+
 2014-10-24  Joseph Myers  <joseph@codesourcery.com>
 
 	[BZ #14138]
